--- a/css/sections/_carousel.css
+++ b/css/sections/_carousel.css
@@ -8,8 +8,8 @@ body {
 
 
 #carousel-section {
-    padding-top: 1rem;
-    padding-bottom: 3rem;
+    padding-top: 3rem;
+    padding-bottom: 4rem;
     
     .c-wrap {
         display: grid;
@@ -18,25 +18,24 @@ body {
         
         .c-title {
             font-weight: 800;
-            font-size: 22px;
+            font-size: 20px;
+            margin-bottom: 1rem;
             
-            @media (min-width: 768px) and (max-width: 1399px) {
-                font-size: 24px;
-                margin-bottom: -4rem;
+            @media (min-width: 768px) {
+                font-size: 26px;
+                margin-bottom: -3.5rem;
                 
                 @media (min-width: 1400px) {
-                    font-size: 26px;
+                    font-size: 30px;
+                    margin-bottom: 0;
                 }
             }
         }
         
         /* MOBILE VIEW */
-        .mobile-carousel { 
-            display: block; 
-        
-        
+        .mobile-carousel { display: block; 
+            
             .carousel-wrapper {
-                /* position: relative; */
                 max-width: 600px;
                 overflow: hidden;
                 
@@ -59,8 +58,8 @@ body {
                         opacity: 1;
                         position: relative;
                         grid-area: 1 / 1 / span 1 / span 1;
-                        transition: transform 0.7s ease-in-out; /* For smooth sliding */
-                        
+
+                        transition: transform 0.7s ease-in-out; /* For smooth sliding */                       
                     }
                     
                     .c-layers {
@@ -68,6 +67,7 @@ body {
                         display: flex;
                         justify-content: center;
                         z-index: 0;
+                        margin-bottom: 1rem;
                         
                         .inner-layers {
                             max-width: 100%;
@@ -83,22 +83,30 @@ body {
                     }
                     
                     .mobile-text-container {
-                        padding: 1rem;  
+                       
                         grid-area: 2 / 1 / span 1 / span 3;
+                        
+                        .carousel-heading {
+                            height: 50px;
+
+                        }
+                        .carousel-text {
+                            height: 100px;
+                            margin-top: 1rem;
+                        }
                     }
                 }
-                
-                @media (min-width: 768px) {
-                    display: none;
-                }
+
+                @media (min-width: 768px) { display: none; }
             }
         }     
         
         /* SETTINGS | --- TABLET & DESKTOP --- | SETTINGS */
         
-        .carousel-wrapper {
-            overflow: visible;
+        .carousel-wrapper { overflow: visible;
+            
             display: grid;
+            justify-items: center;
             align-items: center;
 
             .slide-box {
@@ -108,61 +116,75 @@ body {
                 
                 .slide-layers {
                     cursor: pointer;
-
-                    #t-1 { order: 0; }
-                    #t-2 { order: 1; }
-                    #t-3 { order: 2; }
-
                     img {
                         transition: transform 0.5s ease, z-index 0.5s ease;
                     }
                 }
             }
-
-            .slide-bg {
-                grid-area: 1 / 1;
-                transform: scale(0.75);
-            }
+            
+            .slide-bg { grid-area: 1 / 1; }
 
             .carousel-text-container {
-                margin-top: 1rem;
-                grid-area: 2 / 1 / span 1 / span 3;
+                margin-top: -3rem;
+                grid-area: 2 / 1 / span 1 / span 1;
             }
         }
 
 
         /* TABLET VIEW */
-        .tablet-carousel { 
-            display: none; 
+        .tablet-carousel { display: none; 
             
-            @media (min-width: 768px) and (max-width: 1399px) {
-                display: block; 
+            @media (min-width: 768px) and (max-width: 1399px) { display: block; 
+            
+                .carousel-wrapper {
+                    
+                    .slide-box {
+                           
+                        .slide-layers {
+                             
+                            #t-1 { order: 0; }
+                            #t-2 { order: 1; }
+                            #t-3 { order: 2; }
+                        }
+                    }
+                    
+                    .slide-bg {
+                        
+                        transform: scale(0.75);
+                    }
+                }
             }
         }     
 
         /* DESKTOP VIEW */
-        .desktop-carousel { 
-            display: none; 
+        .desktop-carousel { display: none; 
             
-            @media (min-width: 1400px) {
-                display: block;
-                
+            @media (min-width: 1400px) { display: block;
+
                 /* https://www.w3schools.com/css/css3_masking.asp */
                 .mask {
                     -webkit-mask-image: url(/images/carousel/desktop/desktop-mask-layer_1.svg);
                     mask-image: url(/images/carousel/desktop/desktop-mask-layer_1.svg);
-                    mask-repeat: no-repeat;    
+                    mask-repeat: repeat-x;
+                    contain: layout;
                 }
-
+                
                 .carousel-wrapper {
 
                     .slide-box {
                         gap: 8rem;
+
+                        .slide-layers {
+                            
+                            #t-1 { order: 0; }
+                            #t-2 { order: 1; }
+                            #t-3 { order: 2; }
+                        }
                     }
 
-                    .slide-bg {
-                        transform: scale(1);
-                    }
+                    .slide-bg { transform: scale(1); }
+
+                    .carousel-text-container { margin-top: 1rem; }
                 }
             }
         }
