--- a/css/sections/_app-features.css
+++ b/css/sections/_app-features.css
@@ -1,3 +1,12 @@
+/* 
+█████╗ ██████╗ ██████╗       ███████╗███████╗ █████╗ ████████╗██╗   ██╗██████╗ ███████╗███████╗
+██╔══██╗██╔══██╗██╔══██╗      ██╔════╝██╔════╝██╔══██╗╚══██╔══╝██║   ██║██╔══██╗██╔════╝██╔════╝
+███████║██████╔╝██████╔╝█████╗█████╗  █████╗  ███████║   ██║   ██║   ██║██████╔╝█████╗  ███████╗
+██╔══██║██╔═══╝ ██╔═══╝ ╚════╝██╔══╝  ██╔══╝  ██╔══██║   ██║   ██║   ██║██╔══██╗██╔══╝  ╚════██║
+██║  ██║██║     ██║           ██║     ███████╗██║  ██║   ██║   ╚██████╔╝██║  ██║███████╗███████║
+╚═╝  ╚═╝╚═╝     ╚═╝           ╚═╝     ╚══════╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝  ╚═╝╚══════╝╚══════╝ */
+
+
 #app-features-section {
     padding-bottom: 1rem;
     @media (min-width: 768px) {
