to tired to continue. Added an accordian and started adding some css. I will probably delete everything and do a fresh start over on the _faq.css file.

--- a/css/sections/_navbar.css
+++ b/css/sections/_navbar.css
@@ -4,7 +4,7 @@
 /* Start with the header being fully transparent */
 .sticky-header {
     position: -webkit-sticky; /* For Safari */
-    position: sticky;
+    position: fixed;
     top: 0;
     /* left: 0; */
     width: 100%;
@@ -45,8 +45,9 @@ header {
         grid-template-columns: 1fr auto auto;
         /* grid-template-areas: "Logo sw mobile"; */
         gap: 1.5em;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
+        /* padding-top: 1rem;
+        padding-bottom: 1rem; */
+
         
         align-content: center;
         
