--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 @import url('/css/sections/_brands.css');
 @import url('/css/sections/_app-features.css');
 @import url('/css/sections/_carousel.css');
+@import url('/css/sections/_faq.css');
 
 /* FONT - MANROPE | GOOGLE FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
