Lots of comments, and some deletes of commented text, moved commented text in some places, commented full sections and added code to the navbar, it doesn't work as it should, so I'm trying to back-track and fix it in steps.

--- a/css/sections/_carousel.css
+++ b/css/sections/_carousel.css
@@ -165,8 +165,8 @@ body {
                 .mask {
                     -webkit-mask-image: url(/images/carousel/desktop/desktop-mask-layer_1.svg);
                     mask-image: url(/images/carousel/desktop/desktop-mask-layer_1.svg);
-                    mask-repeat: repeat-x;
-                    contain: layout;
+                    /* mask-repeat: repeat-x;
+                    contain: layout; */
                 }
                 
                 .carousel-wrapper {
