--- a/css/other/_dark-mode.css
+++ b/css/other/_dark-mode.css
@@ -11,6 +11,14 @@
 
     /* Navbar */
 
+    .sticky-header {
+        background: transparent;
+
+    }
+    .sticky-header.scrolled {
+        background: var(--color-gray-900);
+    }
+    
     header {
         /* Features Text*/
         .nav-link {
