--- a/css/sections/_brands.css
+++ b/css/sections/_brands.css
@@ -1,35 +1,33 @@
-#brands-section { 
-    display: none; 
-    #brand-5, #brand-6 { display: none; }
-
-    @media (min-width: 768px) {
-        display: block;
-        margin-top: 3rem;
-        margin-bottom: 2rem;
-
-        @media (min-width: 1400px) {
-            margin-top: 4.5rem;
-            margin-bottom: 7rem;
+#brands-section { display: none; 
     
-            #brand-5, #brand-6 { display: flex; }     
-        }     
-    }
-   
     .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
         gap: .8rem;
+        
+        .brand-box {
+            border: 1px solid var(--color-gray-300);
+            border-radius: 8px;
+            height: 100px;
+            width: 196px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    
     }
     
-}
+    @media (min-width: 768px) {
+        display: block;
+        #brand-5, #brand-6 { display: none; }
+        margin-top: 3rem;
+        margin-bottom: 2rem;
 
-.brand-box {
-    border: 1px solid var(--color-gray-300);
-    border-radius: 8px;
-    height: 100px;
-    width: 196px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+        @media (min-width: 1400px) {
+            #brand-5, #brand-6 { display: flex; }     
+            margin-top: 4.5rem;
+            margin-bottom: 7rem;
+        }     
+    }
 }
