--- a/css/sections/_navbar.css
+++ b/css/sections/_navbar.css
@@ -5,8 +5,7 @@
         justify-content: center;
         align-items: center;
         grid-template-columns: 1fr auto auto;
-        /* margin: 0; */
-        /* padding: 1rem; */
+        padding: 1rem;
         gap: 1.5em;
         
         @media (min-width: 768px) {
@@ -14,7 +13,6 @@
             
             @media (min-width: 1400px) {
                 grid-template-columns: auto 1fr auto auto;
-                gap: 3rem;
             }
         } 
     }     
@@ -29,11 +27,11 @@
 /* MEMO: -webkit-sticky is for Safari */
 .sticky-header {
     position: -webkit-sticky; 
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    /* max-height: 78px; */
+    max-height: 80px;
     background-color: transparent;
     backdrop-filter: blur(10px);
     transition: background-color 0.5s ease;
