--- a/css/sections/_showcase.css
+++ b/css/sections/_showcase.css
@@ -1,9 +1,15 @@
-#showcase-section {
+#showcase-section {    
+
+    padding-top: 4rem;
     padding-bottom: 2rem;
     
     @media (min-width: 768px) {
+        padding-top: 4rem;
         padding-bottom: 0;
-        margin-top: -2rem;
+        
+        @media (min-width: 1400px) {
+            padding-top: 4rem;
+        }
     }
     
 
@@ -35,18 +41,16 @@
         text-align: center;
         font-weight: 800;
         font-size: 26px;
-        margin-top: -5rem;
-        
+        margin-bottom: 1rem;
         
         @media (min-width: 768px) {
             font-size: 30px;
-            margin-top: -3rem;
             margin-bottom: 4rem;
             
             @media (min-width: 1400px) {
                 text-align: left;
                 font-size: 40px;
-                margin-top: 0;
+                margin-top: -1rem;
                 margin-bottom: 0;   
             }
         }
@@ -132,7 +136,6 @@
             }
         }
 
-
         .img-back {
             position: absolute;
             /* z-index: -10; */
@@ -143,8 +146,7 @@
 
             @media (min-width: 1400px) {
                 right: 205px;
-                max-height: 80%;
-                
+                max-height: 80%; 
             }
         }
 
@@ -163,4 +165,3 @@
         }
     }      
 }
-
