Extended the subscribe-section, and created the structure, I also styled it to the 'extent' of my capability.

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@
 @import url('/css/sections/_app-features.css');
 @import url('/css/sections/_carousel.css');
 @import url('/css/sections/_faq.css');
+@import url('/css/sections/_subscribe.css');
+
 
 /* FONT - MANROPE | GOOGLE FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
