changed the classes and id of faq-contact, and added and changed names on most of the id's and classes in subscribe-section, added sub-border div, and moved around the inner content, changed most of the _subscribe.css content, basically done.

--- a/css/sections/_subscribe.css
+++ b/css/sections/_subscribe.css
@@ -1,56 +1,116 @@
+#subscribe-section {
+    .center {
+        
+        @media (min-width: 1400px) {
+            display: grid;
+            justify-items: center;
+        }
+    }
+}
+
 .sub-box {
     display: grid;
-    justify-content: center;
-    align-content: center;
-    padding: 1rem;
-    gap: 1rem;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
     border-radius: .5rem;
+    /* gap: 1rem; */
+    padding-top: 2rem;
     
-    @media (min-width: 1400px) {
-        display: flex;
+    @media (min-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+        /* max-width: 1200px; */
+        --_p-sides: 1.5rem;
+        padding-bottom: 2rem;
+        
+        padding-left: var(--_p-sides);
+        padding-right: var(--_p-sides);
+        
+        @media (min-width: 1400px) {
+            --_p-sides: 5rem;
+
+            padding-left: var(--_p-sides);
+            padding-right: var(--_p-sides);
+        }
     }
     
-    .sub-image-box {
+    .sub-info-box {
         display: flex;
         gap: 1rem;
-        /* max-width: 400px; */
         font-weight: 800;
         font-size: 21.6px;
-        /* 
-        img {
-            width: 78px;
-            width: 78px;
-        } */
         
+        #img-text-md {
+            padding-right: 1rem;
+        }
+        
+        #sub-image {
+            padding-left: 1rem;
+        }
+
+        @media (min-width: 768px) {
+            font-size: 22.7px;
+
+            #img-text-md {
+                padding-right: 2rem;
+            }
+            
+            @media (min-width: 1400px) {
+                font-size: 24px;
+                gap: 2rem;
+            }
+        }
+      
         span {
             display: none;
             
             @media (min-width: 1400px) {
-                display: inline-flex;
+                display: block;
             }    
         }
     }
-
-    .sub-text-box {
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        border: 1px solid var(--color-gray-400);
-        border-radius: .5rem;
-        overflow: hidden;
-        font-size: 16px;
-        
     
-        .email {
-            padding: 1.05rem;
-            border: none;
+    .sub-input-box {
+        padding: 2rem;
+        width: 100%;
+        @media (min-width: 768px) {
+            padding: 0;
         }
-        .sub-btn {
+        
+        .sub-border {
+            display: grid;
+            grid-template-columns: 2fr auto;
+            justify-content: center;
+            align-content: center;
+            border: 1px solid var(--color-gray-400);
+            border-radius: .5rem;
+            overflow: hidden;
+            max-height: 50px;
+
+            #sub-scribe {
+                justify-content: center;
+                align-content: center;
+                font-size: 16px;
+            }
             
-            .btn {
-                border: none;
-                border-radius: 0;
-                height: 3rem;
+            .input-field {
+                .email {
+                    grid-column: 1 / span 2 ;
+                    width: 100%;
+                    height: 100%;
+                    padding: 1rem;
+                    border: none;
+                }
+            }
+
+            .sub-btn {
+                z-index: 1;
+    
+                .btn {
+                    border: none;
+                    border-radius: 0;
+                    height: 3rem;
+                }
             }
         }
     }
